bk_ida/gobmkida/c0/decide_position
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/decide_position/src/engine/sgfdecide.c:899:1: error: use of undeclared identifier 'decide_position_snames'
decide_position_snames[dragon[pos].crude_status], 
^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/decide_position/src/obj/1/sgfdecide.o] Error 1
